--- a/halo.plist
+++ b/halo.plist
@@ -28,7 +28,7 @@
 
      <!-- http或者https链接的ipa文件地址 -->
 
-     <string>http://x5.justep.com/apps/x5.ipa</string>
+     <string>http://172.16.5.241:8080/upload/app.ipa</string>
 
     </dict>
 
@@ -46,7 +46,7 @@
 
      <!-- http或者https链接的图片地址，可直接使用app对应的icon（分辨率没强制要求） -->
 
-     <string>http://x5.justep.com/apps/x5.png</string>
+     <string>http://172.16.5.241:8080/logo/upload/iconaaa.png</string>
 
     </dict>
 
@@ -64,7 +64,7 @@
 
      <!-- http或者https链接的小图片地址，可直接使用app对应的icon（分辨率没强制要求） -->
 
-     <string>http://x5.justep.com/apps/x5.png</string>
+     <string>http://172.16.5.241:8080/logo/upload/iconaaa.png</string>
 
     </dict>
 
@@ -78,13 +78,13 @@
 
     <!-- BundleID，就是新建app时的包名 -->
 
-    <string>com.justep.x5.demo</string>
+    <string>org.reactjs.native.dcmp.halo</string>
 
     <key>bundle-version</key>
 
     <!-- 版本号 -->
 
-    <string>5.3.2</string>
+    <string>1.0.1</string>
 
     <key>kind</key>
 
@@ -94,7 +94,7 @@
 
     <!-- 安装app时的提示信息 -->
 
-    <string>X5 App download</string>
+    <string>掌上智维下载中...</string>
 
    </dict>
 
