--- a/halo.plist
+++ b/halo.plist
@@ -46,7 +46,7 @@
 
      <!-- http或者https链接的图片地址，可直接使用app对应的icon（分辨率没强制要求） -->
 
-     <string>http://172.16.5.241:8080/logo/upload/iconaaa.png</string>
+     <string>https://github.com/chouchou723/halo-dcmp/blob/main/icon-29@3x.png?raw=true</string>
 
     </dict>
 
@@ -64,7 +64,7 @@
 
      <!-- http或者https链接的小图片地址，可直接使用app对应的icon（分辨率没强制要求） -->
 
-     <string>http://172.16.5.241:8080/logo/upload/iconaaa.png</string>
+     <string>https://github.com/chouchou723/halo-dcmp/blob/main/icon-29@3x.png?raw=true</string>
 
     </dict>
 
